added cat image, visible after button click