@@ -1,6 +1,10 @@
 package com.example.demo;
 
+import com.example.demo.entity.Skill;
+import com.example.demo.entity.User;
 import com.example.demo.repository.UserRepository;
+import java.util.Arrays;
+import javax.annotation.PostConstruct;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
@@ -14,10 +18,13 @@ public class BootDemoApplication {
 		SpringApplication.run(BootDemoApplication.class, args);
 	}
 
-//	@PostConstruct
-//	public void setupDbWithData() {
-//		User user = new User("Hajo", Arrays.asList(new Skill("Pact"), new Skill("Watching Cat Videos")));
-//		userRepository.save(user);
-//		userRepository.saveAll(List.of(user));
-//	}
+	@PostConstruct
+	public void setupDbWithData() {
+		User user = new User("Hajo", Arrays.asList(
+				new Skill("Cats"), new Skill("Watching Cat Videos"),
+				new Skill("Pact"), new Skill("Writing Pact Tests")
+		));
+		userRepository.save(user);
+	}
+
 }
